--- a/index.html
+++ b/index.html
@@ -7,19 +7,23 @@
 </head>
 <body>
 
-<h1>Ma liste</h1> <!-- Titre H1 --> 
+	<header>
+	<h1>Ma liste</h1> <!-- Titre H1 --> 
+	</header>
 
-<ul> <!-- Liste de nombre -->
-	<p>1</p>
-	<p>2</p>
-	<p>3</p>
-	<p>4</p>
-	<p>5</p>
-	<p>6</p>
-	<p>7</p>
-	<p>8</p>
-	<p>9</p>
-</ul>
+	<section>
+		<ul> <!-- Liste de nombre -->
+			<p>1</p>
+			<p>2</p>
+			<p>3</p>
+			<p>4</p>
+			<p>5</p>
+			<p>6</p>
+			<p>7</p>
+			<p>8</p>
+			<p>9</p>
+		</ul>
+	</section>
 
 
 </body>
