Modification HTML CSS et ajout du JS

--- a/index.html
+++ b/index.html
@@ -12,19 +12,11 @@
 	</header>
 
 	<section>
-		<ul> <!-- Liste de nombre -->
-			<p>1</p>
-			<p>2</p>
-			<p>3</p>
-			<p>4</p>
-			<p>5</p>
-			<p>6</p>
-			<p>7</p>
-			<p>8</p>
-			<p>9</p>
+		<ul id="liste"> <!-- Liste de nombre -->
+			
 		</ul>
 	</section>
 
-
+	<script type="text/javascript" src="javascript.js"></script> <!-- Liaison avec JavaScript -->
 </body>
 </html>
