Ajout d'un message si JS est désactiver

--- a/index.html
+++ b/index.html
@@ -13,6 +13,11 @@
 
 	<section>
 		<ul id="liste"> <!-- Liste de nombre -->
+		<noscript>
+ 			Pour accéder à toutes les fonctionnalités de ce site, vous devez activer JavaScript.
+ 			Voici les <a href="http://www.enable-javascript.com/fr/" target="_blank">
+ 			instructions pour activer JavaScript dans votre navigateur Web</a>.
+		</noscript>
 			
 		</ul>
 	</section>
